--- a/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -4,7 +4,7 @@ metadata:
   name: require-run-as-non-root-user
   annotations:
     policies.kyverno.io/title: Require Run As Non-Root User in CEL
-    policies.kyverno.io/category: Pod Security Standards (Restricted)
+    policies.kyverno.io/category: Pod Security Standards (Restricted) in CEL
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
     kyverno.io/kyverno-version: 1.11.0
