--- a/other/audit-secret-token-type/audit-secret-token-type.yaml
+++ b/other/audit-secret-token-type/audit-secret-token-type.yaml
@@ -9,7 +9,14 @@ metadata:
     policies.kyverno.io/subject: Secret
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
-      Audit secrets of type kubernetes.io/service-account-token to ensure secure usage.
+      This policy audits for secrets of type 'kubernetes.io/service-account-token'.
+      In version v1.24, more enhancements have been introduced, affecting the behavior of 
+      service accounts and their secrets.In previous versions, when you create a service account, 
+      it automatically creates a secret resource associated with the service account.In version
+      v1.24 when you create a service account, secrets are no longer automatically created. 
+      To create a token,refer to the documentation for more details  
+      https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/ and
+      https://kubernetes.io/docs/reference/access-authn-authz/service-accounts-admin/
 spec:
   validationFailureAction: audit
   background: true
