corrected .chainsaw-test
Signed-off-by: swastik959 <Sswastik959@gmail.com>

--- a/other/check-service-account/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/other/check-service-account/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -1,6 +1,6 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: check-svc-account
+  name: check-service-accounts
 status:
   ready: true
