--- a/other/check-service-account/artifacthub-pkg.yaml
+++ b/other/check-service-account/artifacthub-pkg.yaml
@@ -1,4 +1,4 @@
-name: check-service-account
+name: check-service-accounts
 version: 1.0.0
 displayName: Check Existence of Secrets in ServiceAccount
 createdAt: "2024-01-06T20:14:33.000Z"
