--- a/other/check-service-account/.chainsaw-test/chainsaw-test.yaml
+++ b/other/check-service-account/.chainsaw-test/chainsaw-test.yaml
@@ -1,7 +1,7 @@
 apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
-  name: check-service-account
+  name: check-service-accounts
 spec:
   steps:
   - name: step-01
@@ -26,4 +26,4 @@ spec:
         ref:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
-          name: check-svc-account
+          name: check-service-accounts
