--- a/other/check-service-account/check-service-account.yaml
+++ b/other/check-service-account/check-service-account.yaml
@@ -3,9 +3,11 @@ kind: ClusterPolicy
 metadata:
   name: check-service-accounts
   annotations:
-    policies.kyverno.io/title: Check Exisitence of Secrets Reference in ServiceAccount
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/title: Check Long-Lived Secrets in ServiceAccounts
+    policies.kyverno.io/category: Security
     policies.kyverno.io/severity: medium
+    kyverno.io/kyverno-version: 1.11.1
+    kyverno.io/kubernetes-version: "1.27"
     policies.kyverno.io/subject: Secret,ServiceAccount
     policies.kyverno.io/description: >-
       Before version 1.24, Kubernetes automatically generated Secret-based tokens 
@@ -14,9 +16,8 @@ metadata:
       ServiceAccount's secrets field. If the Secret is referenced in the secrets 
       field, it is considered an auto-generated legacy token. These legacy Tokens can
       be of security concern and should be audited.
-
 spec:
-  validationFailureAction: Enforce
+  validationFailureAction: Audit
   background: true
   rules:
     - name: deny-secrets
@@ -26,7 +27,6 @@ spec:
             kinds:
               - ServiceAccount
       validate:
-        message: "long lived API tokens are not allowed"
+        message: "Long-lived API tokens are not allowed."
         pattern:
           X(secrets):
-            
