--- a/pod-security-cel/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
+++ b/pod-security-cel/restricted/disallow-capabilities-strict/disallow-capabilities-strict.yaml
@@ -6,6 +6,7 @@ metadata:
     policies.kyverno.io/title: Disallow Capabilities (Strict) in CEL expressions
     policies.kyverno.io/category: Pod Security Standards (Restricted) in CEL
     policies.kyverno.io/severity: medium
+    policies.kyverno.io/minversion: 1.11.0
     kyverno.io/kyverno-version: 1.11.0
     kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/subject: Pod
