--- a/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
+++ b/pod-security-cel/restricted/require-run-as-non-root-user/require-run-as-non-root-user.yaml
@@ -7,6 +7,7 @@ metadata:
     policies.kyverno.io/category: Pod Security Standards (Restricted) in CEL
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    policies.kyverno.io/minversion: 1.11.0
     kyverno.io/kyverno-version: 1.11.0
     kyverno.io/kubernetes-version: "1.26-1.27"
     policies.kyverno.io/description: >-
