--- a/other/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
+++ b/other/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
@@ -14,7 +14,7 @@ metadata:
       is used for legacy ServiceAccount tokens . These legacy Tokens can
       be of security concern and should be audited.
 spec:
-  validationFailureAction: Enforce
+  validationFailureAction: Audit
   background: true
   rules:
   - name: deny-secret-service-account-token-type
