more descriptive file name
Signed-off-by: swastik959 <Sswastik959@gmail.com>

--- a/other/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
+++ b/other/check-serviceaccount-secrets/.chainsaw-test/chainsaw-test.yaml
@@ -8,7 +8,7 @@ spec:
     try:
     - script:
         content: |
-          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../check-service-account.yaml | kubectl create -f -
+          sed 's/validationFailureAction: audit/validationFailureAction: Enforce/' ../check-serviceaccount-secrets.yaml | kubectl create -f -
     - assert:
         file: chainsaw-step-01-assert-1.yaml
   - name: step-02
@@ -26,4 +26,4 @@ spec:
         ref:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
-          name: check-service-accounts
+          name: check-serviceaccount-secrets
