--- a/other/check-serviceaccount-secrets/check-serviceaccount-secrets.yaml
+++ b/other/check-serviceaccount-secrets/check-serviceaccount-secrets.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: check-service-accounts
+  name: check-serviceaccount-secrets
   annotations:
     policies.kyverno.io/title: Check Long-Lived Secrets in ServiceAccounts
     policies.kyverno.io/category: Security
