--- a/other/check-serviceaccount-secrets/.chainsaw-test/chainsaw-step-01-assert-1.yaml
+++ b/other/check-serviceaccount-secrets/.chainsaw-test/chainsaw-step-01-assert-1.yaml
@@ -1,6 +1,6 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: check-service-accounts
+  name: check-serviceaccount-secrets
 status:
   ready: true
