--- a/other/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
+++ b/other/deny-secret-service-account-token-type/deny-secret-service-account-token-type.yaml
@@ -5,6 +5,8 @@ metadata:
   annotations:
     policies.kyverno.io/title: Deny Secret Service Account Token Type
     policies.kyverno.io/category: Security
+    kyverno.io/kubernetes-version: "1.27"
+    kyverno.io/kyverno-version: 1.11.1
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Secret
     policies.kyverno.io/description: >-
