--- a/other/verify-git-repositories/.chainsaw-test/chainsaw-test.yml
+++ b/other/verify-git-repositories/.chainsaw-test/chainsaw-test.yml
@@ -2,12 +2,12 @@ apiVersion: chainsaw.kyverno.io/v1alpha1
 kind: Test
 metadata:
   creationTimestamp: null
-  name: verify-flux-images
+  name: verify-git-repositories
 spec:
   steps:
   - name: step-01
     try:
     - apply:
-        file: ./../verify-flux-images.yaml
+        file: ../verify-git-repositories.yaml
     - assert:
         file: policy-assert.yaml
