--- a/other/disallow-proc-self-fd-workingdir/artifacthub-pkg.yml
+++ b/other/disallow-proc-self-fd-workingdir/artifacthub-pkg.yml
@@ -3,8 +3,10 @@ version: 1.0.0
 displayName: Disallow workingDir with self file descriptors
 createdAt: "2024-02-02T00:00:00.000Z" 
 description: >-
-      In order to mitigate CVE-2024-21626, this policy prevent the creation of Pods
-      with workingDir set in /proc/self/fd/*
+      This policy prevents the configuration of a container workingDir with file descriptors
+      that start with /proc/self/fd. This is a partial mitigation for CVE-2024-21626 aka
+      Leaky Vessels Container Breakout. For additional details and mitigation please refer to
+      https://snyk.io/blog/leaky-vessels-docker-runc-container-breakout-vulnerabilities/.
 install: |-
     ```shell
     kubectl apply -f https://raw.githubusercontent.com/kyverno/policies/main/other/disallow-proc-self-fd-workingdir/disallow-proc-self-fd-workingdir.yaml
@@ -13,8 +15,10 @@ keywords:
   - runc
   - CVE-2024-21626
 readme: | 
-  In order to mitigate CVE-2024-21626, this policy prevent the creation of Pods
-  with workingDir set in /proc/self/fd/*
+  This policy prevents the configuration of a container workingDir with file descriptors
+  that start with /proc/self/fd. This is a partial mitigation for CVE-2024-21626 aka
+  Leaky Vessels Container Breakout. For additional details and mitigation please refer to
+  https://snyk.io/blog/leaky-vessels-docker-runc-container-breakout-vulnerabilities/.
 
   Refer to the documentation for more details on Kyverno annotations: https://artifacthub.io/docs/topics/annotations/kyverno/
 annotations: 
