fix: require-unique-external-dns on updates
Signed-off-by: Tiko JG <su-tiko@proton.me>

--- a/other/require-unique-external-dns/require-unique-external-dns.yaml
+++ b/other/require-unique-external-dns/require-unique-external-dns.yaml
@@ -32,7 +32,7 @@ spec:
         - name: alldns
           apiCall:
             urlPath: "/api/v1/services"
-            jmesPath: "items[].metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\""
+            jmesPath: "items[?[metadata.namespace, metadata.name] != ['{{request.object.metadata.namespace}}', '{{request.object.metadata.name}}']].metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\""
       preconditions:
         all:
         - key: "{{ request.operation || 'BACKGROUND' }}"
