--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,13 +19,15 @@ jobs:
       matrix:
         k8s-version:
           - name: v1.25
-            version: v1.25.11
+            version: v1.25.16
           - name: v1.26
-            version: v1.26.6
+            version: v1.26.14
           - name: v1.27
-            version: v1.27.3
+            version: v1.27.11
           - name: v1.28
-            version: v1.28.0
+            version: v1.28.7
+          - name: v1.29
+            version: v1.29.2
         tests:
           - ^argo$
           - ^aws$
