--- a/other/add-certificates-volume/.chainsaw-test/chainsaw-test.yaml
+++ b/other/add-certificates-volume/.chainsaw-test/chainsaw-test.yaml
@@ -31,27 +31,9 @@ spec:
         file: pod-not-patched.yaml
   - name: step-99
     try:
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - other-certvol-ns
-        entrypoint: kubectl
-    - command:
-        args:
-        - "20"
-        entrypoint: sleep
-    - command:
-        args:
-        - delete
-        - pods
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - other-certvol-ns
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete all --all --force --grace-period=0 -n other-certvol-ns
+    - sleep:
+        duration: 20s
+    - script:
+        content: kubectl delete pods --all --force --grace-period=0 -n other-certvol-ns
