--- a/other/block-pod-exec-by-pod-name/.chainsaw-test/chainsaw-test.yaml
+++ b/other/block-pod-exec-by-pod-name/.chainsaw-test/chainsaw-test.yaml
@@ -23,10 +23,8 @@ spec:
         file: chainsaw-step-02-apply-4.yaml
   - name: step-03
     try:
-    - command:
-        args:
-        - "5"
-        entrypoint: sleep
+    - sleep:
+        duration: 5s
   - name: step-04
     try:
     - script:
@@ -39,13 +37,5 @@ spec:
         content: kubectl exec -n bpe-podname-ns not-myapp -- ls
   - name: step-99
     try:
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - bpe-podname-ns
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete all --all --force --grace-period=0 -n bpe-podname-ns
