--- a/other/check-serviceaccount/.chainsaw-test/chainsaw-test.yaml
+++ b/other/check-serviceaccount/.chainsaw-test/chainsaw-test.yaml
@@ -56,13 +56,5 @@ spec:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
           name: check-sa
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - check-sa-ns
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete all --all --force --grace-period=0 -n check-sa-ns
