--- a/best-practices/restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
+++ b/best-practices/restrict-image-registries/.chainsaw-test/chainsaw-test.yaml
@@ -45,36 +45,12 @@ spec:
           -n ir-pods-namespace; then exit 1; else exit 0; fi;
   - name: step-98
     try:
-    - command:
-        args:
-        - delete
-        - deployments
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - ir-pods-namespace
-        entrypoint: kubectl
-    - command:
-        args:
-        - delete
-        - pods
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - ir-pods-namespace
-        entrypoint: kubectl
-    - command:
-        args:
-        - delete
-        - cronjobs
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - ir-pods-namespace
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete deployments --all --force --grace-period=0 -n ir-pods-namespace
+    - script:
+        content: kubectl delete pods --all --force --grace-period=0 -n ir-pods-namespace
+    - script:
+        content: kubectl delete cronjobs --all --force --grace-period=0 -n ir-pods-namespace
   - name: step-99
     try:
     - delete:
