--- a/other/block-updates-deletes/.chainsaw-test/chainsaw-test.yaml
+++ b/other/block-updates-deletes/.chainsaw-test/chainsaw-test.yaml
@@ -62,66 +62,25 @@ spec:
         file: chainsaw-step-03-apply-2.yaml
   - name: step-04
     try:
-    - command:
-        args:
-        - create
-        - --context=blocksvcuser-context
-        - -n
-        - block-updates-deletes-ns
-        - -f
-        - svc.yaml
-        entrypoint: kubectl
-    - command:
-        args:
-        - apply
-        - --context=blocksvcuser-context
-        - -n
-        - block-updates-deletes-ns
-        - -f
-        - svc-good-update.yaml
-        entrypoint: kubectl
+    - script:
+        content: kubectl create --context=blocksvcuser-context -n block-updates-deletes-ns -f svc.yaml
+    - script:
+        content: kubectl apply --context=blocksvcuser-context -n block-updates-deletes-ns -f svc-good-update.yaml
     - script:
         content: if kubectl apply --context=blocksvcuser-context -n block-updates-deletes-ns
           -f svc-bad-update.yaml; then exit 1; else exit 0; fi
-    - command:
-        args:
-        - delete
-        - svc
-        - --context=blocksvcuser-context
-        - -n
-        - block-updates-deletes-ns
-        - svc01
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete svc --context=blocksvcuser-context -n block-updates-deletes-ns svc01
     - script:
         content: if kubectl delete svc --context=blocksvcuser-context -n block-updates-deletes-ns
           svc02; then exit 1; else exit 0; fi
-    - command:
-        args:
-        - apply
-        - -n
-        - block-updates-deletes-ns
-        - -f
-        - svc-bad-update.yaml
-        entrypoint: kubectl
-    - command:
-        args:
-        - delete
-        - svc
-        - -n
-        - block-updates-deletes-ns
-        - svc02
-        entrypoint: kubectl
+    - script:
+        content: kubectl apply -n block-updates-deletes-ns -f svc-bad-update.yaml
+    - script:
+        content: kubectl delete svc -n block-updates-deletes-ns svc02
   - name: step-05
     try:
-    - command:
-        args:
-        - config
-        - unset
-        - users.blocksvcuser
-        entrypoint: kubectl
-    - command:
-        args:
-        - config
-        - unset
-        - contexts.blocksvcuser-context
-        entrypoint: kubectl
+    - script:
+        content: kubectl config unset users.blocksvcuser
+    - script:
+        content: kubectl config unset contexts.blocksvcuser-context
