--- a/other/mutate-pod-binding/.chainsaw-test/chainsaw-test.yaml
+++ b/other/mutate-pod-binding/.chainsaw-test/chainsaw-test.yaml
@@ -12,10 +12,8 @@ spec:
     - script:
         content: |
           kubectl get configmap -n kyverno kyverno -o yaml | sed 's/\[Binding,\*,\*\]//g' - | sed 's/\[Pod\/binding,\*,\*\]//g' - | sed 's/\[Node\/\*,\*,\*\]//g' - | sed 's/\[Node,\*,\*\]//g' - | kubectl apply -f -
-    - command:
-        args:
-        - "5"
-        entrypoint: sleep
+    - sleep:
+        duration: 5s
   - name: step-02
     try:
     - apply:
