--- a/other/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
+++ b/other/prevent-bare-pods/.chainsaw-test/chainsaw-test.yaml
@@ -27,10 +27,8 @@ spec:
         file: deployment.yaml
   - name: step-03
     try:
-    - command:
-        args:
-        - "5"
-        entrypoint: sleep
+    - sleep:
+        duration: 5s
     - script:
         content: |
           if [ $(kubectl get pods -n prevent-naked-pods-ns | grep gooddeployment01 | wc -l) -gt 0 ]; then exit 0; else exit 1; fi
@@ -41,13 +39,5 @@ spec:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
           name: prevent-bare-pods
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - prevent-naked-pods-ns
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete all --all --force --grace-period=0 -n prevent-naked-pods-ns
