--- a/other/protect-node-taints/.chainsaw-test/chainsaw-test.yaml
+++ b/other/protect-node-taints/.chainsaw-test/chainsaw-test.yaml
@@ -12,10 +12,8 @@ spec:
           kubectl get configmap kyverno -n kyverno -o yaml | sed 's/\[Node\/\*,\*,\*\]//g' - | sed 's/\[Node,\*,\*\]//g' - | kubectl apply -f -
           node=$(kubectl get nodes --no-headers | awk '{print $1}' | head -n 1)
           kubectl taint nodes "$node" foo=bar:NoSchedule
-    - command:
-        args:
-        - "5"
-        entrypoint: sleep
+    - sleep:
+        duration: 5s
   - name: step-02
     try:
     - apply:
