--- a/other/remove-serviceaccount-token/.chainsaw-test/chainsaw-test.yaml
+++ b/other/remove-serviceaccount-token/.chainsaw-test/chainsaw-test.yaml
@@ -29,13 +29,5 @@ spec:
         file: pod-not-patched02.yaml
   - name: step-04
     try:
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - remove-satoken-ns
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete all --all --force --grace-period=0 -n remove-satoken-ns
