--- a/other/scale-deployment-zero/.chainsaw-test/chainsaw-test.yaml
+++ b/other/scale-deployment-zero/.chainsaw-test/chainsaw-test.yaml
@@ -14,10 +14,8 @@ spec:
     - script:
         content: |
           kubectl get configmap -n kyverno kyverno -o yaml | sed 's/system\:nodes/system\:thisisjunk/g' - | kubectl apply -f -
-    - command:
-        args:
-        - "5"
-        entrypoint: sleep
+    - sleep:
+        duration: 5s
   - name: step-02
     try:
     - apply:
@@ -41,7 +39,5 @@ spec:
     - script:
         content: |
           kubectl get configmap -n kyverno kyverno -o yaml | sed 's/system\:thisisjunk/system\:nodes/g' - | kubectl apply -f -
-    - command:
-        args:
-        - "5"
-        entrypoint: sleep
+    - sleep:
+        duration: 5s
