--- a/pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test.yaml
+++ b/pod-security-cel/restricted/restrict-volume-types/.chainsaw-test/chainsaw-test.yaml
@@ -37,13 +37,5 @@ spec:
           apiVersion: kyverno.io/v1
           kind: ClusterPolicy
           name: restrict-volume-types
-    - command:
-        args:
-        - delete
-        - all
-        - --all
-        - --force
-        - --grace-period=0
-        - -n
-        - restrict-voltypes-ns
-        entrypoint: kubectl
+    - script:
+        content: kubectl delete all --all --force --grace-period=0 -n restrict-voltypes-ns
