--- a/other/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
+++ b/other/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
@@ -26,10 +26,8 @@ spec:
     try:
     - sleep:
         duration: 10s
-    - command:
-        args:
-        - ./label-check.sh
-        entrypoint: bash
+    - script:
+        content: ./label-check.sh
   - name: step-04
     try:
     - script:
