chore: cleanup command (#909)
* chore: cleanup command

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

* chmod

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

---------

Signed-off-by: Charles-Edouard Brétéché <charles.edouard@nirmata.com>

--- a/other/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
+++ b/other/label-nodes-cri/.chainsaw-test/chainsaw-test.yaml
@@ -27,10 +27,8 @@ spec:
     try:
     - sleep:
         duration: 10s
-    - command:
-        args:
-        - ./label-check.sh
-        entrypoint: bash
+    - script:
+        content: ./label-check.sh
   - name: step-04
     try:
     - script:
